新增上传图片的功能

--- a/mysite/static/editor/examples/external-use.html
+++ b/mysite/static/editor/examples/external-use.html
@@ -110,8 +110,8 @@ $("#open-image-dialog").bind('click', function(){
                 });
                 
                 // or
-                $("#open-image-dialog").bind('click', function(){
-                    testEditor.executePlugin("imageDialog", "../plugins/image-dialog/image-dialog"); // load and execute plugin
+                $("#open-images-dialog").bind('click', function(){
+                    testEditor.executePlugin("imageDialog", "../plugins/images-dialog/images-dialog"); // load and execute plugin
                 });
             });
         </script>
